--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-27  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/78904
+	* gcc.target/i386/pr78904-3.c: New test.
+
 2016-12-27  Alexander Ivchenko  <alexander.ivchenko@intel.com>
 
 	* gcc.target/i386/mpx/vla-trailing-1-lbv.c: New test.
